--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,13 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   country_code_picker: ^3.0.0
+  local_auth: ^2.1.7
+
+  # Added for profile picture functionality
+  image_picker: ^1.0.7
+
+  # For API requests
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
